Fix portfollio wrap

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -76,7 +76,7 @@ body {
     width:100%;
     top:0;
     box-sizing:border-box;
-    padding:1em;
+    padding:1.5em;
     display:flex;
     justify-content: space-between;
     
@@ -209,6 +209,7 @@ body {
 .portfolio-box{
     
     display:inline-block;
+    width:300px !important;
     text-align: left;
     padding:1.3em;
     
